methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:10: error: not found: value FacingTrail
while (!isOverBaggle()) {while (!FacingTrail()) {right()}; forward()}
                                 ^SlugHunting:10: error: type mismatch;
 found   : Unit
 required: Boolean
while (!isOverBaggle()) {while (!FacingTrail()) {right()}; forward()}
^