methods.slug.SlugHunting.scala.code




def hunt() {
def isFacingTrail():Boolean = {if (isFacingWall()) {return false}
                                   else {forward(); if (getGroundColor()==Color.green) {backward(); return true} else {backward(); return false}}  

while (!isOverBaggle()) {while (!FacingTrail()) {right()}; forward()}
    // Write your code here
}

}